<?xml version="1.0"?>
<package format="2">
  <name>offboard_py</name>
  <version>0.0.0</version>
  <description>The offboard_py package</description>

  <!-- Maintainer information -->
  <maintainer email="root@todo.todo">root</maintainer>

  <!-- License information -->
  <license>BSD</license>

  <!-- Author information -->
  <author email="your.email@example.com">Your Name</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Additional export information -->
  </export>
</package>
